# titicaca-environmental-foresight

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.local.md  CLAUDE.md  deep-research-report.md  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
data/: inventory.md
data/_metadata/: authorship.tsv  xlsx_structure.tsv  zip_manifest.tsv
data/sources/: _schema.md  ana_calidad_agua_v2.yaml  ana_informes_tecnicos_ala_huancane.yaml  ana_informes_tecnicos_ala_ilave.yaml  ana_informes_tecnicos_ala_juliaca.yaml  ana_informes_tecnicos_ala_ramis.yaml  ana_metales_cuencas.yaml  ana_monitoreo_binacional.yaml  ana_observatorio_calidad_lago.yaml  ana_observatorio_coords.csv  ana_red_monitoreo.yaml  ana_tributarias_2013_2025.yaml  fauna_endemicas_amenazadas.yaml  inei_censo_puno_2007_2017.yaml  inei_demografia_proyecciones_puno.yaml  midagri_precio_chacra_puno.yaml  midarh_derechos_agua.yaml  mincetur_turismo_puno.yaml  minsa_mortalidad_materna_neonatal_puno.yaml  minsa_salud_morbilidad_puno.yaml  oas_pnuma_tdps_1996.yaml  peblt_monitoreo_lago.yaml  plan_accion_titicaca_2020.yaml  pronied_mantenimiento_colegios_puno.yaml  sentinel2_chla_titicaca.yaml  snirh_monitoreo_lago.yaml  station_coords_catalog.csv  vertederos_caudales_coata.yaml
data/sources/aoi/: titicaca_pe.geojson
data/sources/limnology_insitu/: README.md  ana_binacional_lago_titicaca_2013.csv  ana_binacional_lago_titicaca_2013_oct.csv  ana_binacional_lago_titicaca_2014_mar.csv  ana_binacional_lago_titicaca_2019_apr.csv  ana_binacional_lago_titicaca_2019_oct.csv  peblt_crucero_hidroquimico_i_2019.csv
docs/: AVANCE.md  CONTRIBUTIONS.md  DECISION_LOG.md
scripts/: deny_destructive.py  ocr_docling_extract.py
src/titicaca_environmental_foresight/: catalog.py  model.py
src/titicaca_environmental_foresight/gold/: __init__.py  trophic_risk.py
src/titicaca_environmental_foresight/silver/: __init__.py  ana_observatorio.py  limnology_pdf.py  station_catalog.py  station_coords.py
src/titicaca_environmental_foresight/tier2/: __init__.py  sentinel2.py
tests/: test_catalog.py  test_deny_destructive.py  test_gold_trophic_risk.py  test_model.py  test_silver_ana_observatorio.py  test_silver_limnology_pdf.py  test_silver_station_catalog.py  test_silver_station_coords.py  test_smoke.py  test_tier2_sentinel2.py
