[project]
name = "titicaca-environmental-foresight"
version = "0.1.0"
description = "Visual-predictive tool mapping contamination risk and eutrophication scenarios for Lake Titicaca (El Comercio special)"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.2",
    "pyarrow>=15.0",
    "pyproj>=3.6",
    "rich>=13.0",
    "pyyaml>=6.0",
    "fastexcel>=0.20.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/titicaca_environmental_foresight"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
