[project]
name = "titicaca-environmental-foresight"
version = "0.1.0"
description = "Visual-predictive tool mapping contamination risk and eutrophication scenarios for Lake Titicaca (El Comercio special)"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.2",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "pyproj>=3.6",
    "rich>=13.0",
    "pyyaml>=6.0",
    "fastexcel>=0.20.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
# Tier-2 satélite: solo para correr el pipeline real (STAC pull + rasters).
# Los tests de CI cubren funciones puras (numpy/polars), por eso estas deps NO
# están en el core ni en dev y se importan lazy dentro de las funciones IO.
satellite = [
    "pystac-client>=0.8,<0.9",
    "odc-stac>=0.3.10,<0.4",
    # odc-loader importa dask.base.quote, removido en dask >=2025 → pin compatible.
    "dask>=2024.1,<2025",
    "rioxarray>=0.15,<0.18",
    "xarray>=2024.3,<2025",
    "shapely>=2.0,<3.0",
    # rasterio AWSSession (lectura S3 de eodata CDSE con credenciales) requiere boto3.
    "boto3>=1.34,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/titicaca_environmental_foresight"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
