[project]
name = "titicaca-environmental-foresight"
version = "0.1.0"
description = "Visual-predictive tool mapping contamination risk and eutrophication scenarios for Lake Titicaca (El Comercio special)"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.42.1",
    "duckdb>=1.5.4",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "pyproj>=3.6",
    "rich>=13.0",
    "pyyaml>=6.0",
    "fastexcel>=0.20.2",
]

[project.optional-dependencies]
dev = ["pytest>=9.1.1", "ruff>=0.15.20"]
# Tier-2 satélite: solo para correr el pipeline real (STAC pull + rasters).
# Los tests de CI cubren funciones puras (numpy/polars), por eso estas deps NO
# están en el core ni en dev y se importan lazy dentro de las funciones IO.
satellite = [
    "pystac-client>=0.9.0,<0.10",
    "odc-stac>=0.5.2,<0.6",
    # odc-loader importa dask.base.quote, removido en dask >=2025 → pin compatible.
    "dask>=2026.7.0,<2027",
    "rioxarray>=0.19.0,<0.20",
    "xarray>=2026.4.0,<2027",
    "shapely>=2.0,<3.0",
    # rasterio AWSSession (lectura S3 de eodata CDSE con credenciales) requiere boto3.
    "boto3>=1.43.41,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/titicaca_environmental_foresight"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
